--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,16 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.=..\\..\\
-file.reference.curvesapi-1.03.jar=src/java/com/lib/curvesapi-1.03.jar
-file.reference.kaptcha-2.3.2.jar=src/java/com/lib/kaptcha-2.3.2.jar
-file.reference.mysql-connector-java-5.1.20-bin.jar-1=src/java/com/lib/mysql-connector-java-5.1.20-bin.jar
-file.reference.poi-3.14-20160307.jar-1=src/java/com/lib/poi-3.14-20160307.jar
-file.reference.poi-ooxml-3.14-20160307.jar-1=src/java/com/lib/poi-ooxml-3.14-20160307.jar
-file.reference.poi-ooxml-schemas-3.14-20160307.jar-1=src/java/com/lib/poi-ooxml-schemas-3.14-20160307.jar
-file.reference.xmlbeans-2.6.0.jar=src/java/com/lib/xmlbeans-2.6.0.jar
+file.reference.curvesapi-1.03.jar=src\\java\\com\\lib\\curvesapi-1.03.jar
+file.reference.javax.annotation.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\javax.annotation.jar
+file.reference.jaxb-api-osgi.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\jaxb-api-osgi.jar
+file.reference.kaptcha-2.3.2.jar=src\\java\\com\\lib\\kaptcha-2.3.2.jar
+file.reference.mysql-connector-java-5.1.20-bin.jar=src\\java\\com\\lib\\mysql-connector-java-5.1.20-bin.jar
+file.reference.poi-3.14-20160307.jar=src\\java\\com\\lib\\poi-3.14-20160307.jar
+file.reference.poi-ooxml-3.14-20160307.jar=src\\java\\com\\lib\\poi-ooxml-3.14-20160307.jar
+file.reference.poi-ooxml-schemas-3.14-20160307.jar=src\\java\\com\\lib\\poi-ooxml-schemas-3.14-20160307.jar
+file.reference.webservices-api-osgi.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\webservices-api-osgi.jar
+file.reference.xmlbeans-2.6.0.jar=src\\java\\com\\lib\\xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,12 +53,15 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.javax.annotation.jar}:\
+    ${file.reference.jaxb-api-osgi.jar}:\
+    ${file.reference.webservices-api-osgi.jar}:\
     ${file.reference.curvesapi-1.03.jar}:\
     ${file.reference.kaptcha-2.3.2.jar}:\
-    ${file.reference.mysql-connector-java-5.1.20-bin.jar-1}:\
-    ${file.reference.poi-3.14-20160307.jar-1}:\
-    ${file.reference.poi-ooxml-3.14-20160307.jar-1}:\
-    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.20-bin.jar}:\
+    ${file.reference.poi-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
