File Upload Method

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.=..\\..\\
+file.reference.commons-fileupload-1.3.1.jar=src\\java\\com\\lib\\commons-fileupload-1.3.1.jar
 file.reference.curvesapi-1.03.jar=src\\java\\com\\lib\\curvesapi-1.03.jar
 file.reference.javax.annotation.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\javax.annotation.jar
 file.reference.jaxb-api-osgi.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\jaxb-api-osgi.jar
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.poi-3.14-20160307.jar}:\
     ${file.reference.poi-ooxml-3.14-20160307.jar}:\
     ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
