--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ endorsed.classpath=\
 excludes=
 file.reference.=..\\..\\
 file.reference.commons-fileupload-1.3.1.jar=src\\java\\com\\lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.5-javadoc.jar=src\\java\\com\\lib\\commons-io-2.5-javadoc.jar
+file.reference.commons-io-2.5.jar=src\\java\\com\\lib\\commons-io-2.5.jar
 file.reference.curvesapi-1.03.jar=src\\java\\com\\lib\\curvesapi-1.03.jar
 file.reference.javax.annotation.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\javax.annotation.jar
 file.reference.jaxb-api-osgi.jar=src\\java\\com\\lib\\javaee-endorsed-api-6.0\\jaxb-api-osgi.jar
@@ -64,7 +66,9 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.14-20160307.jar}:\
     ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.5-javadoc.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
